@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
+  dataplot-20080225-r1.ebuild:
+  Notify user about the need to update their environment after merging to
+  avoid error messages.
+
   13 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
   dataplot-20080225-r1.ebuild:
   Add DEPEND on dev-util/pkgconfig since it is used in the autotools stuff.
